Replace most usage of PHP with mockjax handlers. Do some demo cleanup as well, update to newer masked-input plugin. Keep captcha demo in PHP. Fixes #662

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta charset="utf-8">
 <title>jQuery validation plug-in - main demo</title>
 
-<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+<link rel="stylesheet" href="css/screen.css" />
 
-<script src="../lib/jquery.js" type="text/javascript"></script>
-<script src="../jquery.validate.js" type="text/javascript"></script>
+<script src="../lib/jquery.js"></script>
+<script src="../jquery.validate.js"></script>
 
-<script type="text/javascript">
+<script>
 $.validator.setDefaults({
 	submitHandler: function() { alert("submitted!"); }
 });
