--- a/demo/ajaxSubmit-integration-demo.html
+++ b/demo/ajaxSubmit-integration-demo.html
@@ -7,12 +7,28 @@
 <style type="text/css">
 .warning { color: red; }
 </style>
-<script src="../lib/jquery.js" type="text/javascript"></script>
-<script src="../lib/jquery.form.js" type="text/javascript"></script>
-<script src="../jquery.validate.js" type="text/javascript"></script>
+<script src="../lib/jquery.js"></script>
+<script src="../lib/jquery.mockjax.js"></script>
+<script src="../lib/jquery.form.js"></script>
+<script src="../jquery.validate.js"></script>
 
 <script type="text/javascript">
 	jQuery(function() {
+		$.mockjax({
+			url: "login.action",
+			response: function(settings) {
+				var user = settings.data.match( /user=(.+?)($|&)/ )[ 1 ],
+					password = settings.data.match( /password=(.+?)($|&)/ )[ 1 ];
+				if ( password !== "foobar" ) {
+					this.responseText = "Your password is wrong (must be foobar).";
+					return;
+				}
+				this.responseText = "Hi " + user + ", welcome back.";
+			},
+			responseStatus: 200,
+			responseTime: 500
+		});
+
 		// show a simple loading indicator
 		var loader = jQuery('<div id="loader"><img src="images/loading.gif" alt="loading..." /></div>')
 			.css({position: "relative", top: "1em", left: "25em", display: "inline"})
@@ -46,7 +62,7 @@
 <h1 id="banner"><a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 
-<form method="post" class="cmxform" id="form" action="form.php">
+<form method="post" class="cmxform" id="form" action="login.action">
 	<fieldset>
 		<legend>Login Form (Enter "foobar" as password)</legend>
 		<p>
@@ -63,13 +79,11 @@
 	</fieldset>
 </form>
 
-<div id="result">Please login!</div>
+<div id="result" class="warning">Please login!</div>
 
 <br/>
 
 <button id="reset">Programmatically reset above form!</button>
-
-<p>Backend file: <a href="form.phps">form.phps</a></p>
 
 <a href="index.html">Back to main page</a>
 
