--- a/demo/marketo/index.html
+++ b/demo/marketo/index.html
@@ -1,48 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2000/REC-xhtml1-200000126/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="title" content="Subscription Signup | Marketo" />
-<meta name="robots" content="index, follow" />
-<meta name="description" content="Marketo Search Marketing application" />
-<meta name="keywords" content="Marketo, Search Marketing" />
-<meta name="language" content="en" />
+<meta charset="utf-8">
 <title>Subscription Signup | Marketo</title>
 
-<link rel="shortcut icon" href="/favicon.ico" />
+<script src="../../lib/jquery.js"></script>
+<script src="../../lib/jquery.mockjax.js"></script>
+<script src="../../jquery.validate.js"></script>
 
-<script src="../../lib/jquery.js" type="text/javascript"></script>
-<script src="../../jquery.validate.js" type="text/javascript"></script>
+<script src="jquery.maskedinput.js"></script>
+<script src="mktSignup.js"></script>
 
-<script type="text/javascript" src="jquery.maskedinput.js"></script>
-<script type="text/javascript" src="mktSignup.js"></script>
-
-<link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css" />
+<link rel="stylesheet" href="stylesheet.css" />
 </head>
 <body>
-<!--[if lte IE 6]>
-  <link rel="stylesheet" type="text/css" media="all" href="ie6.css" />
-<![endif]-->
-
 <!-- start page wrapper --><div id="letterbox">
 
 <!-- start header container -->
 <div id="header-background">
-        <div class="nav-global-container">
-
-                <div class="login"><a href="#"><span></span>Customer Login</a></div>
-                <div class="logo"><a href="#"><img src="images/logo_marketo.gif" width="168" height="73"  alt="Marketo" /></a></div>
+  <div class="nav-global-container">
+    <div class="login"><a href="#"><span></span>Customer Login</a></div>
+    <div class="logo"><a href="#"><img src="images/logo_marketo.gif" width="168" height="73"  alt="Marketo" /></a></div>
 		<div class="nav-global">
-				<ul>
-      		<li><a href="#" class="nav-g01"><span></span>Home</a></li>
-    			<li><a href="#" class="nav-g02"><span></span>Products</a></li>
-    			<li><a href="#" class="nav-g04"><span></span>B2B Marketing Resources</a></li>
-
-    			<li><a href="#" class="nav-g05"><span></span>About Marketo</a></li>
+			<ul>
+    		<li><a href="#" class="nav-g01"><span></span>Home</a></li>
+  			<li><a href="#" class="nav-g02"><span></span>Products</a></li>
+  			<li><a href="#" class="nav-g04"><span></span>B2B Marketing Resources</a></li>
+  			<li><a href="#" class="nav-g05"><span></span>About Marketo</a></li>
 			</ul>
 		</div>
-
 	</div>
 </div>
 <!-- end header container -->
@@ -159,7 +145,7 @@
       <tr>
         <td class="label"><label for="email">Email:</label></td>
         <td class="field">
-          <input id="email" class="required email" remote="emails.php" maxlength="40" name="email" size="20" type="text" tabindex="11" value="" />
+          <input id="email" class="required email" remote="emails.action" maxlength="40" name="email" size="20" type="text" tabindex="11" value="" />
         </td>
       </tr>
 
