Fix paths in tests to use dist copy of files

--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,8 @@
 	<script src="../lib/jquery.form.js"></script>
 	<script src="qunit/qunit.js"></script>
 	<script src="../lib/jquery.mockjax.js"></script>
-	<script src="../jquery.validate.js"></script>
-	<script src="../additional-methods.js"></script>
+	<script src="../dist/jquery.validate.js"></script>
+	<script src="../dist/additional-methods.js"></script>
 	<script src="test.js"></script>
 	<script src="rules.js"></script>
 	<script src="messages.js"></script>
