--- a/test/tabs.html
+++ b/test/tabs.html
@@ -9,7 +9,7 @@
 
 <script src="../lib/jquery.js"></script>
 <script src="../../../ui/current/ui.tabs.js"></script>
-<script src="../jquery.validate.js"></script>
+<script src="../dist/jquery.validate.js"></script>
 <script src="firebug/firebug.js"></script>
 
 <script>
