--- a/test/large.html
+++ b/test/large.html
@@ -8,7 +8,7 @@
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="../lib/jquery.metadata.js" type="text/javascript"></script>
 <script src="../lib/jquery.ajaxQueue.js" type="text/javascript"></script>
-<script src="../jquery.validate.js" type="text/javascript"></script>
+<script src="../dist/jquery.validate.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 $().ready(function() {
