Fix paths in tests to use dist copy of files

--- a/test/tabs.html
+++ b/test/tabs.html
@@ -10,7 +10,7 @@
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="../../../ui/current/ui.tabs.js" type="text/javascript"></script>
 <script type="text/javascript" src="../lib/jquery.metadata.js"></script>
-<script type="text/javascript" src="../jquery.validate.js"></script>
+<script type="text/javascript" src="../dist/jquery.validate.js"></script>
 <script src="firebug/firebug.js" type="text/javascript"></script>
 
 <script type="text/javascript">
