Fix demo paths to use dist files
The demo host will now need to include these files. If the gh-pages
branch is used, the a git add -f may be required

--- a/demo/file_input.html
+++ b/demo/file_input.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="css/cmxform.css" />
 
 <script src="../lib/jquery.js"></script>
-<script src="../jquery.validate.js"></script>
-<script src="../additional-methods.js"></script>
+<script src="../dist/jquery.validate.js"></script>
+<script src="../dist/additional-methods.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function() {
