--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/screen.css" />
 
 <script src="../lib/jquery.js"></script>
-<script src="../jquery.validate.js"></script>
+<script src="../dist/jquery.validate.js"></script>
 
 <script>
 $.validator.setDefaults({
