--- a/demo/login/index.html
+++ b/demo/login/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="screen.css" />
 	
 	<script type="text/javascript" src="../../lib/jquery.js"></script>
-	<script type="text/javascript" src="../../jquery.validate.js"></script>
+	<script type="text/javascript" src="../../dist/jquery.validate.js"></script>
 
 	<script type="text/javascript">
 		
