--- a/demo/multipart/index.html
+++ b/demo/multipart/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="../assets/demo_blue.css" type="text/css" />
 
 <script type="text/javascript" src="../../lib/jquery.js"></script>
-<script type="text/javascript" src="../../jquery.validate.js"></script>
+<script type="text/javascript" src="../../dist/jquery.validate.js"></script>
 <script type="text/javascript" src="js/jquery.maskedinput-1.0.js"></script>
 <script type="text/javascript" src="js/ui.core.js"></script>
 <script type="text/javascript" src="js/ui.accordion.js"></script>
