--- a/demo/tinymce/index.html
+++ b/demo/tinymce/index.html
@@ -4,7 +4,7 @@
 <title>jQuery Validation plugin: integration with TinyMCE</title>
 
 <script type="text/javascript" src="../../lib/jquery.js"></script>
-<script type="text/javascript" src="../../jquery.validate.js"></script>
+<script type="text/javascript" src="../../dist/jquery.validate.js"></script>
 <script type="text/javascript" src="tiny_mce.js"></script>
 <script type="text/javascript">
 	tinyMCE.init({
