--- a/demo/ajaxSubmit-integration-demo.html
+++ b/demo/ajaxSubmit-integration-demo.html
@@ -10,7 +10,7 @@
 <script src="../lib/jquery.js"></script>
 <script src="../lib/jquery.mockjax.js"></script>
 <script src="../lib/jquery.form.js"></script>
-<script src="../jquery.validate.js"></script>
+<script src="../dist/jquery.validate.js"></script>
 
 <script type="text/javascript">
 	jQuery(function() {
