--- a/demo/dynamic-totals.html
+++ b/demo/dynamic-totals.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
 
 <script src="../lib/jquery.js" type="text/javascript"></script>
-<script src="../jquery.validate.js" type="text/javascript"></script>
+<script src="../dist/jquery.validate.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 // only for demo purposes
