--- a/demo/errorcontainer-demo.html
+++ b/demo/errorcontainer-demo.html
@@ -8,7 +8,7 @@
 
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="../lib/jquery.metadata.js" type="text/javascript"></script>
-<script src="../jquery.validate.js" type="text/javascript"></script>
+<script src="../dist/jquery.validate.js" type="text/javascript"></script>
 
 <style type="text/css">
 .cmxform fieldset p.error label { color: red; }
