--- a/demo/jquerymobile.html
+++ b/demo/jquerymobile.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
-	<script src="../jquery.validate.js"></script>
+	<script src="../dist/jquery.validate.js"></script>
 	<style>
 		label.error {
 				color: red;
