--- a/demo/milk/index.html
+++ b/demo/milk/index.html
@@ -8,7 +8,7 @@
 
 <script src="../../lib/jquery.js"></script>
 <script src="../../lib/jquery.mockjax.js"></script>
-<script src="../../jquery.validate.js"></script>
+<script src="../../dist/jquery.validate.js"></script>
 
 <script>
 $(document).ready(function() {
