--- a/demo/tabs/index.html
+++ b/demo/tabs/index.html
@@ -8,7 +8,7 @@
 
 <script src="../../lib/jquery.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/jquery-ui.min.js" type="text/javascript"></script>
-<script src="../../jquery.validate.js" type="text/javascript"></script>
+<script src="../../dist/jquery.validate.js" type="text/javascript"></script>
 
 <script id="demo" type="text/javascript">
 $(document).ready(function() {
