--- a/demo/themerollered.html
+++ b/demo/themerollered.html
@@ -111,7 +111,7 @@ fieldset fieldset label { display: block; }
 </form>
 
 <script src="../lib/jquery-1.6.1.js" type="text/javascript"></script>
-<script src="../jquery.validate.js" type="text/javascript"></script>
+<script src="../dist/jquery.validate.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/ui/jquery-ui-git.js"></script>
 <script type="text/javascript">
 $.validator.setDefaults({
