--- a/demo/radio-checkbox-select-demo.html
+++ b/demo/radio-checkbox-select-demo.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" media="screen" href="css/screen.css">
 
 <script src="../lib/jquery.js"></script>
-<script src="../jquery.validate.js"></script>
+<script src="../dist/jquery.validate.js"></script>
 
 <script>
 // only for demo purposes
