Core: Ignore events on ignored elements
When an ignored element produces a blur event, it causes the valid() method to
return the wrong value.

Fixes gh-700
Closes gh-705

--- a/test/index.html
+++ b/test/index.html
@@ -357,6 +357,15 @@
 			<input type="text" name="ariaRequiredData" id="ariaRequiredData" data-rule-required="true" />
 			<input type="text" name="ariaRequiredClass" id="ariaRequiredClass" class="required" />
 		</form>
+
+		<form id="ignoredElements">
+			<select id="ss1" class="ignore">
+				<option value="1">option 1</option>
+				<option value="2">option 2</option>
+			</select>
+			<br />
+			<input name="test" class="required" value=""/>
+		</form>
 	</div>
 
 </body>
