--- a/test/index.html
+++ b/test/index.html
@@ -318,6 +318,15 @@
 				<input id="bypassSubmitWithNoValidate1" type="submit" formnovalidate value="bypass1"/>
 				<input id="bypassSubmitWithNoValidate2" type="submit" formnovalidate="formnovalidate" value="bypass2"/>
 		</form>
+		
+		<form id="ignoredElements">
+			<select id="ss1" class="ignore">
+				<option value="1">option 1</option>
+				<option value="2">option 2</option>
+			</select>
+			<br />
+			<input name="test" class="required" value=""/>
+		</form>
 	</div>
 
 </body>
