--- a/demo/errorcontainer-demo.html
+++ b/demo/errorcontainer-demo.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta charset="utf-8">
 <title>Test for jQuery validate() plugin</title>
 
-<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+<link rel="stylesheet" media="screen" href="css/screen.css" />
 
-<script src="../lib/jquery.js" type="text/javascript"></script>
-<script src="../lib/jquery.metadata.js" type="text/javascript"></script>
-<script src="../jquery.validate.js" type="text/javascript"></script>
+<script src="../lib/jquery.js"></script>
+<script src="../jquery.validate.js"></script>
 
-<style type="text/css">
+<style>
 .cmxform fieldset p.error label { color: red; }
 div.container {
 	background-color: #eee;
@@ -34,7 +33,7 @@ form.cmxform label.error {
 }
 </style>
 
-<script type="text/javascript">
+<script>
 // only for demo purposes
 $.validator.setDefaults({
 	submitHandler: function() {
@@ -46,16 +45,15 @@ $().ready(function() {
 	$("#form1").validate({
 		errorLabelContainer: $("#form1 div.error")
 	});
-	
+
 	var container = $('div.container');
 	// validate the form when it is submitted
 	var validator = $("#form2").validate({
 		errorContainer: container,
 		errorLabelContainer: $("ol", container),
-		wrapper: 'li',
-		meta: "validate"
+		wrapper: 'li'
 	});
-	
+
 	$(".cancel").click(function() {
 		validator.resetForm();
 	});
@@ -73,11 +71,11 @@ $().ready(function() {
 		<legend>Login Form</legend>
 		<p>
 			<label>Username</label>
-			<input name="user" title="Please enter your username (at least 3 characters)" class="{required:true,minlength:3}" />
+			<input name="user" title="Please enter your username (at least 3 characters)" required minlength="3">
 		</p>
 		<p>
 			<label>Password</label>
-			<input type="password" maxlength="12" name="password" title="Please enter your password, between 5 and 12 characters" class="{required:true,minlength:5}" />
+			<input type="password" maxlength="12" name="password" title="Please enter your password, between 5 and 12 characters" required minlength="5">
 		</p>
 		<div class="error">
 		</div>
@@ -104,11 +102,11 @@ $().ready(function() {
 		<legend>Validating a complete form</legend>
 		<p>
 			<label for="email">Email</label>
-			<input id="email" name="email" class="{validate:{required:true,email:true}}" />
+			<input id="email" name="email" required type="email">
 		</p>
 		<p>
 			<label for="agree">Favorite Color</label>
-			<select id="color" name="color" title="Please select your favorite color!" class="{validate:{required:true}}">
+			<select id="color" name="color" title="Please select your favorite color!" required>
 				<option></option>
 				<option>Red</option>
 				<option>Blue</option>
@@ -117,23 +115,19 @@ $().ready(function() {
 		</p>
 		<p>
 			<label for="phone">Phone</label>
-			<input id="phone" name="phone" class="some styles {validate:{required:true,number:true, rangelength:[2,8]}}" />
+			<input id="phone" name="phone" required type="number" rangelength="[2,8]">
 		</p>
 		<p>
 			<label for="address">Address</label>
-			<input id="address" name="address" class="some other styles {validate:{required:true,minlength:3}}" />
+			<input id="address" name="address" required minlength="3">
 		</p>
 		<p>
 			<label for="avatar">Avatar</label>
-			<input type="file" id="avatar" name="avatar" class="{validate:{required:true,accept:true}}" />
+			<input type="file" id="avatar" name="avatar" required>
 		</p>
 		<p>
 			<label for="agree">Please agree to our policy</label>
-			<input type="checkbox" class="checkbox" id="agree" title="Please agree to our policy!" name="agree" class="{validate:{required:true}}" />
-		</p>
-		<p>
-			<label for="cv">CV</label>
-			<input type="file" id="cv" name="cv" class="{validate:{required:true,accept:'docx?|txt|pdf'}}" />
+			<input type="checkbox" class="checkbox" id="agree" title="Please agree to our policy!" name="agree" required>
 		</p>
 		<p>
 			<input class="submit" type="submit" value="Submit"/>
