Added support for generic messages via data-msg attribute

--- a/test/index.html
+++ b/test/index.html
@@ -135,6 +135,7 @@
 
 		<form id="testForm9">
 			<input id="testEmail9" data-rule-required="true" data-rule-email="true" data-msg-required="required" data-msg-email="email" />
+			<input id="testGeneric9" data-rule-required="true" data-rule-email="true" data-msg="generic" data-msg-email="email" />
 		</form>
 
 		<form id="testForm10">
