--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
 	<script src="rules.js"></script>
 	<script src="messages.js"></script>
 	<script src="methods.js"></script>
+	<script src="aria.js"></script>
 </head>
 <body id="body">
 	<h1 id="qunit-header">
@@ -280,7 +281,7 @@
 			<input class="required" name="hastitle" type="text" title="fromtitle" />
 		</form>
 
-		<form id="ccform" method="get" action="">
+		<form id="ccform" method="get">
 			<input id="cardnumber" name="cardnumber" />
 		</form>
 
@@ -320,7 +321,7 @@
 			<input id="rangeAbsentInvalidLess" name="rangeAbsentInvalidLess" min="200" max="1000" value="50"/>
 
 			<input type="text" id="rangeTextValid" name="rangeTextValid" min="50" max="1000" value="200"/>
-			<input id="rangeAbsentValid" name="rangeTextValid" min="50" max="1000" value="200"/>
+			<input id="rangeAbsentValid" name="rangeAbsentValid" min="50" max="1000" value="200"/>
 
 			<!-- ranges are like numbers in html5, except that browser is not required
 			     to demand an exact value.  User interface could be a slider.
@@ -337,11 +338,15 @@
 		</form>
 
 		<form id="bypassValidation">
-				<input type="text" required/>
+				<input type="text" name="bypassValidationRequiredInput" required/>
 				<input id="normalSubmit" type="submit" value="submit"/>
 				<input id="bypassSubmitWithCancel" type="submit" class="cancel" value="bypass1"/>
 				<input id="bypassSubmitWithNoValidate1" type="submit" formnovalidate value="bypass1"/>
 				<input id="bypassSubmitWithNoValidate2" type="submit" formnovalidate="formnovalidate" value="bypass2"/>
+		</form>
+		
+		<form id="ariaInvalid">
+			<input type="text" name="ariafirstname" id="ariafirstname" />
 		</form>
 	</div>
 
