Initial ARIA-Required implementation
Add aria-required tags to any of the data, static or class required elements.
Dynamic validation for rules added through the form.validate rules object do not get picked up till first run.

--- a/test/index.html
+++ b/test/index.html
@@ -346,7 +346,14 @@
 		</form>
 		
 		<form id="ariaInvalid">
-			<input type="text" name="ariafirstname" id="ariafirstname" />
+			<input type="text" name="ariaInvalidFirstName" id="ariaInvalidFirstName" />
+		</form>
+		
+		<form id="ariaRequired">
+			<input type="text" name="ariaRequiredDynamic" id="ariaRequiredDynamic" />
+			<input type="text" name="ariaRequiredStatic" id="ariaRequiredStatic" required="" />
+			<input type="text" name="ariaRequiredData" id="ariaRequiredData" data-rule-required="true" />
+			<input type="text" name="ariaRequiredClass" id="ariaRequiredClass" class="required" />
 		</form>
 	</div>
 
