Added NIF, NIE and CIF Spanish documents numbers validation
* Added some translations to /localization
* Added test suite
Fixes gh-830

--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html id="html">
 <head>
+	<meta charset="utf8" />
 	<title>jQuery - Validation Test Suite</title>
 	<link rel="stylesheet" href="qunit/qunit.css" />
 	<script src="jquery.js"></script>
