Fix path to dist folder in multipart demo
Closes gh-866

--- a/demo/multipart/index.html
+++ b/demo/multipart/index.html
@@ -5,7 +5,7 @@
 <title>jQuery accordion form with validation</title>
 
 <script src="../../lib/jquery.js"></script>
-<script src="../dist/jquery.validate.js"></script>
+<script src="../../dist/jquery.validate.js"></script>
 
 <script src="../marketo/jquery.maskedinput.js"></script>
 <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
