Added test for two forms

--- a/test/index.html
+++ b/test/index.html
@@ -343,6 +343,14 @@
 				<input id="bypassSubmitWithNoValidate1" type="submit" formnovalidate value="bypass1"/>
 				<input id="bypassSubmitWithNoValidate2" type="submit" formnovalidate="formnovalidate" value="bypass2"/>
 		</form>
+
+		<form class="multi">
+			<input name="first" type="text" required/>
+		</form>
+		<form class="multi">
+			<input name="second" type="text" required/>
+		</form>
+	</div>
 	</div>
 
 </body>
