--- a/test/index.html
+++ b/test/index.html
@@ -343,6 +343,11 @@
 				<input id="bypassSubmitWithNoValidate1" type="submit" formnovalidate value="bypass1"/>
 				<input id="bypassSubmitWithNoValidate2" type="submit" formnovalidate="formnovalidate" value="bypass2"/>
 		</form>
+
+		<form id="errorElement">
+			<input type="text" data-rule-required="true" id="errorElementInput" />
+			<label for="errorElementInput">error for default errorElement</label>
+		</form>
 	</div>
 
 </body>
