Add qunit tests for conditional validation rules
Updated tests for require_from_group and skip_or_fill_minimum rules.
The tests now check that other validation rules on the form are
enforced.

--- a/test/index.html
+++ b/test/index.html
@@ -289,6 +289,7 @@
 			<input class="productInfo" name="partnumber">
 			<input class="productInfo" name="description">
 			<input class="productInfo" name="color">
+			<input name="supplier">
 			<input class="productInfo" type="checkbox" name="discount" />
 		</form>
 
@@ -344,11 +345,11 @@
 				<input id="bypassSubmitWithNoValidate1" type="submit" formnovalidate value="bypass1"/>
 				<input id="bypassSubmitWithNoValidate2" type="submit" formnovalidate="formnovalidate" value="bypass2"/>
 		</form>
-		
+
 		<form id="ariaInvalid">
 			<input type="text" name="ariaInvalidFirstName" id="ariaInvalidFirstName" />
 		</form>
-		
+
 		<form id="ariaRequired">
 			<input type="text" name="ariaRequiredDynamic" id="ariaRequiredDynamic" />
 			<input type="text" name="ariaRequiredStatic" id="ariaRequiredStatic" required="" />
