Add errorAttribute setting. Fixes #966.
Adds an `errorAttribute` setting that complements the existing `errorElement`
setting. You can use these together to create an error element like
<span data-for="form_field_id">Your error message here.</span>.

--- a/test/index.html
+++ b/test/index.html
@@ -356,6 +356,10 @@
 			<input type="text" name="ariaRequiredData" id="ariaRequiredData" data-rule-required="true" />
 			<input type="text" name="ariaRequiredClass" id="ariaRequiredClass" class="required" />
 		</form>
+
+		<form id="customErrorAttribute">
+			<input type="text" name="errorAttributeDataFor" id="errorAttributeDataFor" class="required" />
+		</form>
 	</div>
 
 </body>
