--- a/demo/multipart/index.html
+++ b/demo/multipart/index.html
@@ -40,7 +40,7 @@ $(document).ready(function(){
 	var v = $("#cmaForm").validate({
 		errorClass: "warning",
 		onkeyup: false,
-		onblur: false,
+		onfocusout: false,
 		submitHandler: function() {
 			alert("Submitted, thanks!");
 		}
