--- a/test/index.html
+++ b/test/index.html
@@ -334,6 +334,10 @@
 			<input type="number" id="rangeNumberInvalidGreater" name="rangeNumberInvalidGreater" min="50" max="200" value="1000"/>
 			<input type="number" id="rangeNumberInvalidLess" name="rangeNumberInvalidLess" min="50" max="200" value="6"/>
 
+			<input type="number" id="rangeMinZeroInvalidLess" name="rangeMinZeroInvalidLess" min="0" value="-1"/>
+			<input type="number" id="rangeMinZeroValidEqual" name="rangeMinZeroValidEqual" min="0" value="0"/>
+			<input type="number" id="rangeMinZeroValidGreater" name="rangeMinZeroValidGreater" min="0" value="1"/>
+
 		</form>
 		<form id="rangeMinDateValid">
 			<input type="date" id="minDateValid" name="minDateValid" min="2012-11-21" value="2012-12-21"/>
