Refactor test cases, include optional support.

--- a/test/index.html
+++ b/test/index.html
@@ -366,6 +366,17 @@
 			<br />
 			<input name="test" class="required" value=""/>
 		</form>
+		
+		<form id="notEqualTo">
+			<input id="email1" type="text" name="email1" value="foo@bar.com" required >
+			<input id="email1Backup" type="text" name="email1Backup" value="foo@aol.com" required >
+
+			<input id="email2" type="text" name="email2" value="fred@flinstone.com" >
+			<input id="email2Backup" type="text" name="email2Backup" value="fred@flinstone.com" >
+			
+			<input id="email3" type="text" name="email3" value="" >
+			<input id="email3Backup" type="text" name="email3Backup" value="" >
+		</form>
 	</div>
 
 </body>
