API Use aria-describedby for non-label elements Fixes #900

--- a/demo/index.html
+++ b/demo/index.html
@@ -215,6 +215,8 @@
 		</li>
 		<li><a href="jquerymobile.html">jQuery Mobile Form Validation</a>
 		</li>
+		<li><a href="errors-within-labels.html">Displaying Errors within Field Labels</a>
+		</li>
 	</ul>
 	<h3>Real-world examples</h3>
 	<ul>
