Core: Fix normalization for rangelength attribute value
This regressed at some point, probably when rules-as-data-attributes where
introduced, since those are automatically parsed as JSON. For the unprocessed
attributes, the array brackets have to be removed.

Also fixes the milk demo, which specified rangelength as the message, instead of
minlength, which it actually uses.

Fixes #1087

--- a/demo/milk/index.html
+++ b/demo/milk/index.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
 			},
 			password: {
 				required: "Provide a password",
-				rangelength: jQuery.validator.format("Enter at least {0} characters")
+				minlength: jQuery.validator.format("Enter at least {0} characters")
 			},
 			password_confirm: {
 				required: "Repeat your password",
