--- a/demo/marketo/step2.htm
+++ b/demo/marketo/step2.htm
@@ -5,7 +5,7 @@
 	<title>Subscription Signup | Marketo</title>
 	<script src="../../lib/jquery.js"></script>
 	<script src="../../lib/jquery.mockjax.js"></script>
-	<script src="../../jquery.validate.js"></script>
+	<script src="../../dist/jquery.validate.js"></script>
 	<script src="jquery.maskedinput.js"></script>
 	<script src="mktSignup.js"></script>
 	<link rel="stylesheet" href="stylesheet.css" />
