--- a/test/index.html
+++ b/test/index.html
@@ -326,20 +326,64 @@
 <script src="addMethod.js"></script>
 <script src="blur.js"></script>
 <script src="checkbox.js"></script>
+<script src="creditcard.js"></script>
+<script src="date.js"></script>
+<script src="dateISO.js"></script>
+<script src="email.js"></script>
+<script src="equalTo.js"></script>
 <script src="expression.js"></script>
+<script src="format.js"></script>
 <script src="ignored.js"></script>
+<script src="max.js"></script>
+<script src="maxlength.js"></script>
+<script src="messages.js"></script>
+<script src="min.js"></script>
+<script src="minlength.js"></script>
 <script src="minMax.js"></script>
+<script src="number.js"></script>
 <script src="radio.js"></script>
+<script src="range.js"></script>
+<script src="rangelength.js"></script>
+<script src="remote.js"></script>
+<script src="required.js"></script>
 <script src="rules.js"></script>
 <script src="test.js"></script>
+<script src="url.js"></script>
 <script src="additional/methodTest.js"></script>
+<script src="additional/bankaccountNL.js"></script>
+<script src="additional/bankorgiroaccountNL.js"></script>
+<script src="additional/bic.js"></script>
+<script src="additional/cifES.js"></script>
+<script src="additional/creditcardtypes.js"></script>
 <script src="additional/currency.js"></script>
 <script src="additional/dateFA.js"></script>
+<script src="additional/dateITA.js"></script>
+<script src="additional/dateNL.js"></script>
+<script src="additional/digits.js"></script>
+<script src="additional/extension.js"></script>
+<script src="additional/giroaccountNL.js"></script>
+<script src="additional/iban.js"></script>
 <script src="additional/maxWords.js"></script>
-<script src="additional/methods.js"></script>
 <script src="additional/minWords.js"></script>
+<script src="additional/mobileNL.js"></script>
+<script src="additional/mobileUK.js"></script>
+<script src="additional/nieES.js"></script>
+<script src="additional/nifES.js"></script>
+<script src="additional/pattern.js"></script>
+<script src="additional/phoneNL.js"></script>
+<script src="additional/phoneUK.js"></script>
+<script src="additional/phoneUS.js"></script>
 <script src="additional/postalCodeCA.js"></script>
+<script src="additional/postalCodeNL.js"></script>
+<script src="additional/postalCodeUK.js"></script>
 <script src="additional/rangeWords.js"></script>
+<script src="additional/require_from_group.js"></script>
+<script src="additional/skip_or_fill_minimum.js"></script>
+<script src="additional/time.js"></script>
+<script src="additional/time12h.js"></script>
+<script src="additional/url2.js"></script>
+<script src="additional/zipcodeUS.js"></script>
 <script src="localization/messages.js"></script>
+<script src="localization/methods_de.js"></script>
 </body>
 </html>
