--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
 	<title>jQuery - Validation Test Suite</title>
 	<link rel="stylesheet" href="qunit/qunit.css" />
 	<script src="../lib/jquery.js"></script>
+	<script src="../lib/jquery.simulate.js"></script>
 	<script src="../lib/jquery.form.js"></script>
 	<script src="qunit/qunit.js"></script>
 	<script src="../lib/jquery.mockjax.js"></script>
@@ -346,6 +347,14 @@
 		</select>
 		<br />
 		<input name="test" class="required" value="" />
+	</form>
+	<form id="radiocheckbox" autocomplete="off">
+		<input id="radiocheckbox-0-1" autocomplete="off" type="radio" name="radiocheckbox-0" required="required" />
+		<input id="radiocheckbox-0-2" autocomplete="off" type="radio" name="radiocheckbox-0" required="required" />
+		<input id="radiocheckbox-0-3" autocomplete="off" type="radio" name="radiocheckbox-0" required="required" />
+		<input id="radiocheckbox-1-1" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required" />
+		<input id="radiocheckbox-1-2" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required" />
+		<input id="radiocheckbox-1-3" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required" />
 	</form>
 </div>
 </body>
