Replace update URLs to jqueryvalidation.org
Fixes gh-1123

--- a/demo/ajaxSubmit-integration-demo.html
+++ b/demo/ajaxSubmit-integration-demo.html
@@ -63,7 +63,7 @@
 	</script>
 </head>
 <body>
-<h1 id="banner"><a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 	<form method="post" class="cmxform" id="form" action="login.action">
 		<fieldset>
