--- a/demo/custom-messages-data-demo.html
+++ b/demo/custom-messages-data-demo.html
@@ -31,7 +31,7 @@
 	</style>
 </head>
 <body>
-<h1 id="banner"><a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 	<p>Take a look at the source to see how messages can be customized with metadata.</p>
 	<!-- Custom rules and messages via data- attributes -->
