--- a/demo/errorcontainer-demo.html
+++ b/demo/errorcontainer-demo.html
@@ -64,7 +64,7 @@
 </head>
 
 <body>
-	<h1 id="banner"><a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Demo</h1>
+	<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 	<div id="main">
 		<form method="get" class="cmxform" id="form1" action="">
 			<fieldset>
