--- a/demo/errors-within-labels.html
+++ b/demo/errors-within-labels.html
@@ -60,9 +60,9 @@ $().ready(function() {
 </head>
 <body>
 
-<h1 id="banner"><a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
-	
+
 	<p>Errors use spans placed within existing label element</p>
 
 	<form method="get" class="cmxform" id="form1" action="">
