--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
 </head>
 <body id="body">
 <h1 id="qunit-header">
-	<a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Test Suite
+	<a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Test Suite
 	<a href="?jquery=1.6.4">jQuery 1.6.4</a>
 	<a href="?jquery=1.7.2">jQuery 1.7.2</a>
 	<a href="?jquery=1.8.3">jQuery 1.8.3</a>
