--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>jQuery - Validation Test Suite</title>
 	<link rel="stylesheet" href="qunit/qunit.css" />
-	<script src="jquery.js"></script>
+	<script src="../lib/jquery.js"></script>
 	<script src="../lib/jquery.form.js"></script>
 	<script src="qunit/qunit.js"></script>
 	<script src="../lib/jquery.mockjax.js"></script>
@@ -24,6 +24,7 @@
 	<a href="?jquery=1.7.2">jQuery 1.7.2</a>
 	<a href="?jquery=1.8.3">jQuery 1.8.3</a>
 	<a href="?jquery=1.9.1">jQuery 1.9.1</a>
+	<a href="?jquery=1.11.1">jQuery 1.11.1</a>
 	<a href="?jquery=git">jQuery Latest (git)</a>
 </h1>
 <div>
