--- a/demo/jquerymobile.html
+++ b/demo/jquerymobile.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<title>My Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
-	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
+	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
 	<style>
 	label.error {
@@ -57,8 +57,8 @@
 	</div>
 </div>
 <script>
-$('#page1').bind('pageinit', function(event) {
-	$('form').validate({
+$( "#page1" ).on( "pageinit", function() {
+	$( "form" ).validate({
 		rules: {
 			email: {
 				required: true
@@ -66,6 +66,9 @@ $('#page1').bind('pageinit', function(event) {
 			password: {
 				required: true
 			}
+		},
+		errorPlacement: function( error, element ) {
+			error.insertAfter( element.parent() );
 		}
 	});
 });
